--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
           <%= yield %>
           <%= render 'layouts/footer' %>
       </div>
+      <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
 </html>
