--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,6 +4,21 @@
 <h1>Sign up</h1>
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
-        <%= render 'form' %>
+        <%= form_for(@user) do |f| %>
+            <%= render 'shared/error_messages', object: f.object %>
+            <%= f.label :name %>
+            <%= f.text_field :name, class: 'form_control' %>
+
+            <%= f.label :email %>
+            <%= f.text_field :email, class: 'form_control' %>
+
+            <%= f.label :password %>
+            <%= f.text_field :password, class: 'form_control' %>
+
+            <%= f.label :password_confirmation, "Confirmation" %>
+            <%= f.text_field :password_confirmation, class: 'form_control' %>
+
+            <%= f.submit "Create my account", class: "btn btn-primary" %>
+        <% end %>
     </div>
 </div>
